Add rating %% Updated History
